--- a/team_profi/MainWindow.xaml
+++ b/team_profi/MainWindow.xaml
@@ -19,7 +19,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="40*"/>
                 <RowDefinition Height="60*"/>
-                <RowDefinition Height="490*"/>
+                <RowDefinition Height="590*"/>
                 <RowDefinition Height="10*"/>
             </Grid.RowDefinitions>
             <Grid Grid.Column="1" Grid.Row="1" Height="60" VerticalAlignment="Top">
@@ -86,7 +86,7 @@
                             BorderThickness="0" Click="Exit_Click"
                             HorizontalAlignment="Left"
                             FontWeight="Bold"
-                            VerticalAlignment="Top" Margin="122,15,0,0" RenderTransformOrigin="0.494,0.547">
+                            VerticalAlignment="Center" Margin="122,0,0,0" RenderTransformOrigin="0.494,0.547">
                     </Button>
 
                     <!--свернуть-->
@@ -102,7 +102,7 @@
                             Style="{StaticResource ButtonClearTheme}" 
                             BorderThickness="0" Click="Svernut_Click" 
                             HorizontalAlignment="Left"
-                            VerticalAlignment="Top" Margin="80,0,0,0" Width="31"/>
+                            VerticalAlignment="Top" Margin="80,-6,0,0" Width="31"/>
 
                     <!--перезапуск-->
                     <Button Content="⟲"
@@ -117,10 +117,10 @@
                             Style="{StaticResource ButtonClearTheme}" 
                             BorderThickness="0" Click="Perezapusk_Click" 
                             HorizontalAlignment="Left"
-                            VerticalAlignment="Top" Margin="41,6,0,0" Width="31" Height="31"/>
+                            VerticalAlignment="Top" Margin="41,0,0,0" Width="31" Height="31"/>
                 </Grid>
             </Border>
-            
+
             <!--наш фрэйм-->
             <Frame Grid.Column="1" Grid.Row="2"
                    Name="ProfiMain"
