--- a/team_profi/MainWindow.xaml
+++ b/team_profi/MainWindow.xaml
@@ -13,13 +13,13 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10*"/>
-                <ColumnDefinition Width="780*"/>
+                <ColumnDefinition Width="880*"/>
                 <ColumnDefinition Width="10*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="40*"/>
                 <RowDefinition Height="60*"/>
-                <RowDefinition Height="590*"/>
+                <RowDefinition Height="690*"/>
                 <RowDefinition Height="10*"/>
             </Grid.RowDefinitions>
             <Grid Grid.Column="1" Grid.Row="1" Height="60" VerticalAlignment="Top">
@@ -66,11 +66,11 @@
         MouseMove="Window_MouseMove" Cursor="SizeAll" Height="40" VerticalAlignment="Top"  >
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="90*"/>
+                        <ColumnDefinition Width="90*"/>
+                        <ColumnDefinition Width="90*"/>
+                        <ColumnDefinition Width="103*"/>
+                        <ColumnDefinition Width="77*"/>
                     </Grid.ColumnDefinitions>
 
                     <!--закрыть-->
@@ -86,7 +86,7 @@
                             BorderThickness="0" Click="Exit_Click"
                             HorizontalAlignment="Left"
                             FontWeight="Bold"
-                            VerticalAlignment="Center" Margin="122,0,0,0" RenderTransformOrigin="0.494,0.547">
+                            VerticalAlignment="Center" Margin="110,0,0,0" RenderTransformOrigin="0.494,0.547" Height="20" Width="24">
                     </Button>
 
                     <!--свернуть-->
@@ -102,7 +102,7 @@
                             Style="{StaticResource ButtonClearTheme}" 
                             BorderThickness="0" Click="Svernut_Click" 
                             HorizontalAlignment="Left"
-                            VerticalAlignment="Top" Margin="80,-6,0,0" Width="31"/>
+                            VerticalAlignment="Top" Margin="68,-6,0,0" Width="31" Height="46"/>
 
                     <!--перезапуск-->
                     <Button Content="⟲"
@@ -117,7 +117,7 @@
                             Style="{StaticResource ButtonClearTheme}" 
                             BorderThickness="0" Click="Perezapusk_Click" 
                             HorizontalAlignment="Left"
-                            VerticalAlignment="Top" Margin="41,0,0,0" Width="31" Height="31"/>
+                            VerticalAlignment="Top" Margin="29,2,0,0" Width="31" Height="30"/>
                 </Grid>
             </Border>
 
