--- a/team_profi/Pages/MainPages/SignIn.xaml
+++ b/team_profi/Pages/MainPages/SignIn.xaml
@@ -36,12 +36,12 @@
             <!--Почта-->
             <TextBox 
                      HorizontalAlignment="Left" VerticalAlignment="Top" Width="506"
-                     TextWrapping="Wrap" Height="58"
+                     TextWrapping="Wrap" Height="58" Name="TxtBoxGmail"
                      Style="{StaticResource ModernTextBox}" Grid.Column="1" Margin="0,34,0,0" Grid.RowSpan="2"/>
             <!--Пароль-->
             <TextBox 
                      HorizontalAlignment="Left" VerticalAlignment="Top" Width="506"
-                     TextWrapping="Wrap" Height="58" Grid.Row="1"
+                     TextWrapping="Wrap" Height="58" Grid.Row="1" Name="TxtBoxPasw"
                      Style="{StaticResource ModernTextBox}" Grid.Column="1" Margin="0,10,0,0"/>
 
         </Grid>
@@ -60,7 +60,7 @@
             <Button Grid.Column="1" Content="ВОЙТИ" 
                     HorizontalAlignment="Left" VerticalAlignment="Top" 
                     Margin="154,0,0,0" Height="46" Width="144"
-                    Style="{StaticResource ModernButtonSignIn}"/>
+                    Style="{StaticResource ModernButtonSignIn}" Click="SignIn_Click"/>
         </Grid>
         <Grid>
             <Label Content="ВХОД" 
