--- a/team_profi/Pages/MainPages/SignUp.xaml
+++ b/team_profi/Pages/MainPages/SignUp.xaml
@@ -40,13 +40,13 @@
             <Label Content="ДАТА РОЖДЕНИЯ" Style="{StaticResource ModernLabelText}" HorizontalAlignment="Left" Grid.Row="6" VerticalAlignment="Center" Height="40" Width="222" Margin="63,0,0,0"/>
             <Label Content="РОЛЬ" Style="{StaticResource ModernLabelText}" HorizontalAlignment="Left" Grid.Row="7" VerticalAlignment="Center" Height="40" Width="222" Margin="63,0,0,0"/>
             <Label Content="УЧЕБНОЕ ЗАВ." Style="{StaticResource ModernLabelText}" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Center" Height="40" Width="222" Margin="63,0,0,0"/>
-            <TextBox Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="66"/>
-            <TextBox Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="67"/>
-            <TextBox Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="67"/>
-            <TextBox Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="66"/>
-            <TextBox Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="67" Grid.Column="1"/>
-            <TextBox Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="7" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="66"/>
-            <TextBox Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="8" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="67"/>
+            <TextBox Name="TxtBoxGmailUp" Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="66"/>
+            <TextBox Name="TxtBoxPaswUp" Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="2" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="67"/>
+            <TextBox Name="TxtBoxLastnameUp" Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="3" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="67"/>
+            <TextBox Name="TxtBoxFirstnameUp" Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="4" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="66"/>
+            <TextBox Name="TxtBoxOtchestvoUp" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="5" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="67" Grid.Column="1"/>
+            <TextBox Name="TxtBoxRoleUp" Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="7" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="66"/>
+            <TextBox Name="TxtBoxUchebUp" Grid.Column="1" Style="{StaticResource ModernTextBox}" HorizontalAlignment="Center" Grid.Row="8" TextWrapping="Wrap" VerticalAlignment="Center" Width="514" Height="67"/>
             <Grid Grid.Row="6" Margin="0,0,0,66" Grid.RowSpan="2" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="140*"/>
@@ -62,9 +62,10 @@
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="133*"/>
-                <ColumnDefinition Width="92*"/>
+                <ColumnDefinition Width="73*"/>
+                <ColumnDefinition Width="107*"/>
             </Grid.ColumnDefinitions>
+            <Button Grid.Column="1" Content="ЗАРЕГИСТРИРОВАТЬСЯ" Style="{StaticResource ModernButtonSignIn}" HorizontalAlignment="Left" Margin="12,0,0,0" VerticalAlignment="Center" Height="54" Width="415" Click="SignUp_Click"/>
         </Grid>
 
 
