--- a/team_profi/WorkWindow/AdminWindow.xaml
+++ b/team_profi/WorkWindow/AdminWindow.xaml
@@ -42,17 +42,17 @@
                 <Button Content="РЕЙТИНГ" 
                     HorizontalAlignment="Center" VerticalAlignment="Center"
                     Grid.Column="1"
-                    Style="{StaticResource ModernButtonsMenu}" Height="50" Width="122"/>
+                    Style="{StaticResource ModernButtonsMenu}" Height="50" Width="122" Click="BtnRaiting_Click"/>
                 <!--задания-->
                 <Button Content="ЗАДАНИЯ" 
                     HorizontalAlignment="Center" VerticalAlignment="Center"
                     Grid.Column="3"
-                    Style="{StaticResource ModernButtonsMenu}" Height="50" Width="122"/>
+                    Style="{StaticResource ModernButtonsMenu}" Height="50" Width="122" Click="BtnTasks_Click"/>
                 <!--ответы-->
                 <Button Content="ОТВЕТЫ" 
                     HorizontalAlignment="Center" VerticalAlignment="Center"
                     Grid.Column="4"
-                    Style="{StaticResource ModernButtonsMenu}" Height="50" Width="122"/>
+                    Style="{StaticResource ModernButtonsMenu}" Height="50" Width="122" Click="BtnAnswer_Click"/>
 
                 <Image Source="\Res\image\logo.jpg"
                    Grid.Column="2" Margin="9,10,9,0"/>
