--- a/team_profi/Pages/AdminPages/TasksAdminPage.xaml
+++ b/team_profi/Pages/AdminPages/TasksAdminPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="team_profi.Pages.AdminPages.MainAminPage"
+﻿<Page x:Class="team_profi.Pages.AdminPages.TasksAdminPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,11 +6,10 @@
       xmlns:local="clr-namespace:team_profi.Pages.AdminPages"
       mc:Ignorable="d" 
       Width="800" Height="700"
-      Title="MainAminPage">
+      Title="TasksAdminPage">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" FontSize="40" Text="Админ" VerticalAlignment="Center" Height="130" Width="278"/>
-        <TextBlock HorizontalAlignment="Center" Name="tttt" TextWrapping="Wrap" FontSize="40" Text="" VerticalAlignment="Top" Height="130" Width="278" Margin="0,420,0,0"/>
+        <Label Content="ЗАДАЧИ АДМИН" FontSize="40" HorizontalAlignment="Left" Margin="241,200,0,0" VerticalAlignment="Top" Height="79" Width="348"/>
 
     </Grid>
 </Page>
