--- a/team_profi/Pages/AdminPages/MainAminPage.xaml
+++ b/team_profi/Pages/AdminPages/MainAminPage.xaml
@@ -9,8 +9,53 @@
       Title="MainAminPage">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" FontSize="40" Text="Админ" VerticalAlignment="Center" Height="130" Width="278"/>
-        <TextBlock HorizontalAlignment="Center" Name="tttt" TextWrapping="Wrap" FontSize="40" Text="" VerticalAlignment="Top" Height="130" Width="278" Margin="0,420,0,0"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="80*"/>
+            <RowDefinition Height="300*"/>
+            <RowDefinition Height="320*"/>
+        </Grid.RowDefinitions>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="15*"/>
+                <ColumnDefinition Width="770*"/>
+                <ColumnDefinition Width="15*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock Grid.Column="1" HorizontalAlignment="Center" 
+                   Name="TxtBl_NameUser" Style="{StaticResource ModernTextBlock}" 
+                   TextWrapping="Wrap" VerticalAlignment="Center" 
+                   Height="60" Width="770"
+                   FontSize="30"/>
+        </Grid>
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="15*"/>
+                <ColumnDefinition Width="770*"/>
+                <ColumnDefinition Width="15*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock x:Name="TxtBl_OsnInfo"
+                    TextWrapping="Wrap"
+                    Style="{StaticResource ModernTextBlock}"
+                    Height="299"
+                    FontSize="20" RenderTransformOrigin="0.5,0.5" Grid.Column="1"
+                    >
+                <TextBlock.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform ScaleX="1"/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </TextBlock.RenderTransform><Run/><LineBreak/><Run/><LineBreak/><Run/><LineBreak/><Run Text="какой то будет текст"/></TextBlock>
+        </Grid>
+        <Grid Grid.Row="2">
+            <Button Content="Выйти"
+                HorizontalAlignment="Center" 
+                VerticalAlignment="Center" 
+                Height="98" Width="250"
+                Style="{StaticResource ModernButtonSignIn}"
+                Click="BtnExitAcc_Click"/>
+        </Grid>
 
     </Grid>
 </Page>
