--- a/team_profi/Pages/AdminPages/MainAminPage.xaml
+++ b/team_profi/Pages/AdminPages/MainAminPage.xaml
@@ -10,9 +10,9 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="80*"/>
-            <RowDefinition Height="300*"/>
-            <RowDefinition Height="320*"/>
+            <RowDefinition Height="130*"/>
+            <RowDefinition Height="400*"/>
+            <RowDefinition Height="170*"/>
         </Grid.RowDefinitions>
         <Grid>
             <Grid.ColumnDefinitions>
@@ -24,35 +24,35 @@
             <TextBlock Grid.Column="1" HorizontalAlignment="Center" 
                    Name="TxtBl_NameUser" Style="{StaticResource ModernTextBlock}" 
                    TextWrapping="Wrap" VerticalAlignment="Center" 
-                   Height="60" Width="770"
-                   FontSize="30"/>
+                   Height="110" Width="750"
+                   Foreground="#1c73ff"
+                   FontSize="40"
+                   FontWeight="Bold"/>
         </Grid>
         <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="100*"/>
+                <RowDefinition Height="100*"/>
+                <RowDefinition Height="100*"/>
+                <RowDefinition Height="100*"/>
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="15*"/>
-                <ColumnDefinition Width="770*"/>
+                <ColumnDefinition Width="350*"/>
+                <ColumnDefinition Width="420*"/>
                 <ColumnDefinition Width="15*"/>
             </Grid.ColumnDefinitions>
-            <TextBlock x:Name="TxtBl_OsnInfo"
-                    TextWrapping="Wrap"
-                    Style="{StaticResource ModernTextBlock}"
-                    Height="299"
-                    FontSize="20" RenderTransformOrigin="0.5,0.5" Grid.Column="1"
-                    >
-                <TextBlock.RenderTransform>
-                    <TransformGroup>
-                        <ScaleTransform ScaleX="1"/>
-                        <SkewTransform/>
-                        <RotateTransform/>
-                        <TranslateTransform/>
-                    </TransformGroup>
-                </TextBlock.RenderTransform><Run/><LineBreak/><Run/><LineBreak/><Run/><LineBreak/><Run Text="какой то будет текст"/></TextBlock>
+            <Label Grid.Column="1" Grid.Row="0" FontSize="30" Style="{StaticResource ModernLabelText}" HorizontalContentAlignment="Right" Content="ПОЧТА" HorizontalAlignment="Left" Margin="67,0,0,0" VerticalAlignment="Center" Height="85" Width="273"/>
+            <Label Grid.Column="1" Grid.Row="1" FontSize="30" Style="{StaticResource ModernLabelText}" HorizontalContentAlignment="Right" Content="ДАТА РОЖДЕНИЯ" HorizontalAlignment="Left" Margin="67,0,0,0" VerticalAlignment="Center" Height="85" Width="273"/>
+            <Label Grid.Column="1" Grid.Row="2" FontSize="30" Style="{StaticResource ModernLabelText}" HorizontalContentAlignment="Right" Content="УЧЕБНОЕ ЗАВ." HorizontalAlignment="Left" Margin="67,0,0,0" VerticalAlignment="Center" Height="85" Width="273"/>
+            <Label Grid.Column="1" Grid.Row="3"  Style="{StaticResource ModernLabelText}" Content="РОЛЬ" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="67,0,0,0" VerticalAlignment="Center" Height="85" Width="273"/>
+
         </Grid>
         <Grid Grid.Row="2">
             <Button Content="Выйти"
                 HorizontalAlignment="Center" 
                 VerticalAlignment="Center" 
-                Height="98" Width="250"
+                Height="54" Width="171"
                 Style="{StaticResource ModernButtonSignIn}"
                 Click="BtnExitAcc_Click"/>
         </Grid>
