да сука, рейтинг с тестом примерно ГОТОВЫ, не дай бог поелтит все

--- a/team_profi/App.xaml
+++ b/team_profi/App.xaml
@@ -16,6 +16,7 @@
                 <ResourceDictionary Source="Theme\StylesTextBlock.xaml"/>
                 <ResourceDictionary Source="Theme\StylesLabel.xaml"/>
                 <ResourceDictionary Source="Theme\StylesTextBox.xaml"/>
+                <ResourceDictionary Source="Theme\StylesBorder.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
         
