--- a/team_profi/Theme/StylesTextBlock.xaml
+++ b/team_profi/Theme/StylesTextBlock.xaml
@@ -1,10 +1,41 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
+    <!--текстБлок для всего-->
     <Style TargetType="{x:Type TextBlock}" x:Key="ModernTextBlock">
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="Foreground" Value="#030017"/>
         <Setter Property="TextAlignment" Value="Center"/>
         <Setter Property="FontFamily" Value="Res/fonts/#Dosis"/>
     </Style>
-    
+
+    <!--текстБлок для рейтинга (данные человека)-->
+    <Style TargetType="{x:Type TextBlock}" x:Key="ModernTextBlockRaiting">
+        <Setter Property="FontSize" Value="30"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="FontFamily" Value="Res/fonts/#Dosis"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+
+    <!--текстБлок для рейтинга (поинты)-->
+    <Style TargetType="{x:Type TextBlock}" x:Key="ModernTextBlockPointsRaiting">
+        <Setter Property="FontSize" Value="35"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontFamily" Value="Res/fonts/#Dosis"/>
+    </Style>
+
+    <!--текстБлок для рейтинга (нумерация)-->
+    <Style TargetType="{x:Type TextBlock}" x:Key="ModernTextBlockNumRaiting">
+        <Setter Property="FontSize" Value="65"/>
+        <Setter Property="Foreground" Value="Black"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontFamily" Value="Res/fonts/#Dosis"/>
+    </Style>
+
 </ResourceDictionary>
