--- a/team_profi/Pages/AdminPages/RaitingAdminPage.xaml
+++ b/team_profi/Pages/AdminPages/RaitingAdminPage.xaml
@@ -18,20 +18,19 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="DataGridRow">
-                                <Grid>
+                                <Grid Name="GridText">
                                     <TextBlock x:Name="NumberTextBlock"
-Style="{StaticResource ModernTextBlockNumRaiting}" 
-HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Padding="0,0,100,0"
-Loaded="NumberTextBlock_Loaded"/>
+                                                Style="{StaticResource ModernTextBlockNumRaiting}" 
+                                                HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Padding="0,0,100,0"
+                                                Loaded="NumberTextBlock_Loaded"/>   
                                     <Border Style="{StaticResource ModernBorderRaiting}" Margin="50,10,10,10">
                                         <Grid>
                                             <!-- Нумерация -->
                                             
 
                                             <!-- Здесь размещаем ФИО и общее количество баллов -->
-                                            <TextBlock Text="{Binding FirstName}" Style="{StaticResource ModernTextBlockRaiting}" HorizontalAlignment="Left" Margin="5" Padding="40,0,0,0"/>
-                                            <TextBlock Text="{Binding Login}" Style="{StaticResource ModernTextBlockRaiting}" HorizontalAlignment="Center"/>
-                                            <TextBlock Text="{Binding Role}" Style="{StaticResource ModernTextBlockPointsRaiting}" HorizontalAlignment="Right" Margin="5" Padding="0,0,40,0"/>
+                                            <TextBlock Name="txtBl_Info" Style="{StaticResource ModernTextBlockRaiting}" HorizontalAlignment="Left" Margin="5" Padding="100,0,0,0"/>
+                                            <TextBlock Text="{Binding TotalPoints}" Style="{StaticResource ModernTextBlockPointsRaiting}" HorizontalAlignment="Right" Margin="5" Padding="0,0,40,0"/>
                                         </Grid>
                                     </Border>
                                 </Grid>
