--- a/team_profi/Pages/UserPages/RaitingUserPage.xaml
+++ b/team_profi/Pages/UserPages/RaitingUserPage.xaml
@@ -8,8 +8,44 @@
       Width="800" Height="700"
       Title="RaitingUserPage">
 
-    <Grid>
-        <TextBlock HorizontalAlignment="Left" FontSize="40" Margin="274,217,0,0" TextWrapping="Wrap" Text="Пользователь рейтинг" VerticalAlignment="Top" Height="163" Width="337"/>
+    <Grid x:Name="MainGrid">
+
+
+        <DataGrid Name="DataGridUser" AutoGenerateColumns="False" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" 
+      GridLinesVisibility="None" HeadersVisibility="None">
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="DataGridRow">
+                                <Grid Name="GridText">
+                                    <TextBlock x:Name="NumberTextBlock"
+                                            Style="{StaticResource ModernTextBlockNumRaiting}" 
+                                            HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Padding="0,0,100,0"
+                                            Loaded="NumberTextBlock_Loaded"/>
+                                    <Border Style="{StaticResource ModernBorderRaiting}" Margin="50,10,10,10">
+                                        <Grid>
+                                            <!-- Нумерация -->
+
+
+                                            <!-- Здесь размещаем ФИО и общее количество баллов -->
+                                            <TextBlock Name="txtBl_Info" Style="{StaticResource ModernTextBlockRaiting}" HorizontalAlignment="Left" Margin="5" Padding="100,0,0,0"/>
+                                            <TextBlock Text="{Binding TotalPoints}" Style="{StaticResource ModernTextBlockPointsRaiting}" HorizontalAlignment="Right" Margin="5" Padding="0,0,40,0"/>
+                                        </Grid>
+                                    </Border>
+                                </Grid>
+
+
+
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </DataGrid.RowStyle>
+        </DataGrid>
+
+
+
 
     </Grid>
 </Page>
