сделал на половину окно создания ЗАДАНИЙ

--- a/team_profi/Pages/AdminPages/TasksAdminPage.xaml
+++ b/team_profi/Pages/AdminPages/TasksAdminPage.xaml
@@ -14,38 +14,30 @@
             <RowDefinition Height="150*"/>
         </Grid.RowDefinitions>
         <Grid>
-            <DataGrid Name="DataGridUser" AutoGenerateColumns="False" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" 
-  GridLinesVisibility="None" HeadersVisibility="None">
+            <DataGrid Name="DataGridUser" AutoGenerateColumns="True" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" GridLinesVisibility="None" HeadersVisibility="None">
                 <DataGrid.RowStyle>
                     <Style TargetType="DataGridRow">
                         <Setter Property="Template">
                             <Setter.Value>
                                 <ControlTemplate TargetType="DataGridRow">
                                     <Grid Name="GridText">
-                                        <TextBlock x:Name="NumberTextBlock"
-                                        Style="{StaticResource ModernTextBlockNumRaiting}" 
-                                        HorizontalAlignment="Left" VerticalAlignment="Center" Margin="5" Padding="0,0,100,0"
-                                        Loaded="NumberTextBlock_Loaded"/>
-                                        <Border Style="{StaticResource ModernBorderRaiting}" Margin="50,10,10,10">
+                                        <Border Style="{StaticResource ModernBorderTask}" Cursor="Hand" Margin="50,10,10,10" MouseLeftButtonDown="Border_MouseLeftButtonDown">
                                             <Grid>
-                                                <!-- Нумерация -->
-
-
-                                                <!-- Здесь размещаем ФИО и общее количество баллов -->
-                                                <TextBlock Name="txtBl_Info" Style="{StaticResource ModernTextBlockRaiting}" HorizontalAlignment="Left" Margin="5" Padding="100,0,0,0"/>
-                                                <TextBlock Text="{Binding TotalPoints}" Style="{StaticResource ModernTextBlockPointsRaiting}" HorizontalAlignment="Right" Margin="5" Padding="0,0,40,0"/>
+                                                <StackPanel>
+                                                    <TextBlock Text="{Binding Topic}" Style="{StaticResource ModernTextBlockTaskName}" HorizontalAlignment="Left" Margin="30,15,15,1"/>
+                                                    <TextBlock Text="{Binding CreationDate}" Style="{StaticResource ModernTextBlockTaskDate}" HorizontalAlignment="Left" Margin="30,0,15,15"/>
+                                                </StackPanel>
                                             </Grid>
                                         </Border>
                                     </Grid>
-
-
-
                                 </ControlTemplate>
                             </Setter.Value>
                         </Setter>
                     </Style>
                 </DataGrid.RowStyle>
+
             </DataGrid>
+
         </Grid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
@@ -53,11 +45,8 @@
                 <ColumnDefinition Width="760*"/>
                 <ColumnDefinition Width="20*"/>
             </Grid.ColumnDefinitions>
-            <Button Content="СОЗДАТЬ НОВОЕ ЗАДАНИЕ" HorizontalAlignment="Center" VerticalAlignment="Center" Height="71" Width="740" Grid.Column="1"
-                    Style="{StaticResource ModernButtonSignIn}"/>
+            <Button Content="СОЗДАТЬ НОВОЕ ЗАДАНИЕ" HorizontalAlignment="Center" VerticalAlignment="Center" Height="88" Width="740" Grid.Column="1"
+                    Style="{StaticResource ModernButtonNewCreateTask}" Click="Button_Click"/>
         </Grid>
-
-
-
     </Grid>
 </Page>
