--- a/team_profi/Theme/StylesButtons.xaml
+++ b/team_profi/Theme/StylesButtons.xaml
@@ -222,4 +222,69 @@
 
     </Style>
 
+
+    <!--Кастом кнопок для создания нового задания-->
+    <Style TargetType="{x:Type Button}" x:Key="ModernButtonNewCreateTask">
+        <Setter Property="Padding" Value="10,5"/>
+        <Setter Property="Margin" Value="5"/>
+        <!-- Синий цвет по умолчанию -->
+        <Setter Property="Background" Value="#003cff"/>
+        <!-- Белый цвет текста по умолчанию -->
+        <Setter Property="Foreground" Value="White"/>
+        <!-- Цвет рамки по умолчанию -->
+        <!--<Setter Property="BorderBrush" Value="#003cff"/
+    <Setter Property="BorderThickness" Value="1"/-->
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="FontSize" Value="35"/>
+        <Setter Property="FontWeight" Value="ExtraBold"/>
+        <Setter Property="Cursor" Value="Hand"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="45"
+                        x:Name="ButtonBorder">
+                        <ContentPresenter HorizontalAlignment="Center"
+                                      VerticalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Trigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation
+                                    Storyboard.TargetName="ButtonBorder"
+                                    Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                    To="#00259e" Duration="0:0:0.2"/>
+                                        <!-- Цвет при наведении -->
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.EnterActions>
+                            <Trigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimation
+                                    Storyboard.TargetName="ButtonBorder"
+                                    Storyboard.TargetProperty="(Border.Background).(SolidColorBrush.Color)"
+                                    To="#003cff" Duration="0:0:0.2"/>
+                                        <!-- Возвращение к исходному цвету -->
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </Trigger.ExitActions>
+                        </Trigger>
+                        <Trigger Property="IsPressed" Value="True">
+                            <Setter TargetName="ButtonBorder" Property="Background" Value="#001761"/>
+                            <!-- Цвет при нажатии -->
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+
+    </Style>
+
 </ResourceDictionary>
