--- a/team_profi/Theme/StylesBorder.xaml
+++ b/team_profi/Theme/StylesBorder.xaml
@@ -1,13 +1,22 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!--стиль для бордер-->
+    <!--стиль для бордер рейтинг-->
     <Style TargetType="{x:Type Border}" x:Key="ModernBorderRaiting">
         <Setter Property="Background" Value="#1c73ff"/>
         <Setter Property="BorderBrush" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="CornerRadius" Value="45"/>
         <Setter Property="Height" Value="90"/>
+    </Style>
+
+    <!--стиль для бордер задания-->
+    <Style TargetType="{x:Type Border}" x:Key="ModernBorderTask">
+        <Setter Property="Background" Value="#fafdff"/> <!--#f0faff-->
+        <Setter Property="BorderBrush" Value="#1c73ff"/>
+        <Setter Property="BorderThickness" Value="5"/>
+        <Setter Property="CornerRadius" Value="50"/>
+        <Setter Property="Height" Value="110"/>
     </Style>
 
 </ResourceDictionary>
