--- a/team_profi/Pages/DopPages/AssigmentDescriptionUserPage.xaml
+++ b/team_profi/Pages/DopPages/AssigmentDescriptionUserPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="team_profi.Pages.DopPages.AssignmentDescriptionPage"
+﻿<Page x:Class="team_profi.Pages.DopPages.AssigmentDescriptionUserPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:team_profi.Pages.DopPages"
       mc:Ignorable="d" 
       Width="800" Height="700"
-Title="TasksAdminPage">
+      Title="TasksAdminPage">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -31,6 +31,7 @@ Title="TasksAdminPage">
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <Button Content="НАЗАД" Style="{StaticResource ModernButtonAuth}" HorizontalAlignment="Left" Margin="45,0,0,0" VerticalAlignment="Center" Height="78" Width="187" Click="BackOut_Click"/>
+            <Button Content="ВЫПОЛНИТЬ" Style="{StaticResource ModernButtonAuth}" HorizontalAlignment="Left" Grid.Column="1" Margin="95,0,0,0" VerticalAlignment="Center" Height="78" Width="260" Click="ExecuteTask_Click"/>
 
         </Grid>
 
