--- a/team_profi/Pages/UserPages/TasksUserPage.xaml
+++ b/team_profi/Pages/UserPages/TasksUserPage.xaml
@@ -9,7 +9,35 @@
       Title="TasksUserPage">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Left" FontSize="40" Margin="274,217,0,0" TextWrapping="Wrap" Text="Пользователь задачи" VerticalAlignment="Top" Height="163" Width="337"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="700*"/>
+        </Grid.RowDefinitions>
+        <Grid>
+            <DataGrid Name="DataGridUser" AutoGenerateColumns="True" BorderBrush="Transparent" Background="Transparent" BorderThickness="0" GridLinesVisibility="None" HeadersVisibility="None">
+                <DataGrid.RowStyle>
+                    <Style TargetType="DataGridRow">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="DataGridRow">
+                                    <Grid Name="GridText">
+                                        <Border Style="{StaticResource ModernBorderTask}" Cursor="Hand" Margin="50,10,10,10" MouseLeftButtonDown="Border_MouseLeftButtonDown">
+                                            <Grid>
+                                                <StackPanel>
+                                                    <TextBlock Text="{Binding Topic}" Style="{StaticResource ModernTextBlockTaskName}" HorizontalAlignment="Left" Margin="30,15,15,1"/>
+                                                    <TextBlock Text="{Binding CreationDate}" Style="{StaticResource ModernTextBlockTaskDate}" HorizontalAlignment="Left" Margin="30,0,15,15"/>
+                                                </StackPanel>
+                                            </Grid>
+                                        </Border>
+                                    </Grid>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </DataGrid.RowStyle>
 
+            </DataGrid>
+
+        </Grid>
+        
     </Grid>
 </Page>
