создан макет для создания задания, начинаю обработку данных бд

--- a/team_profi/Pages/DopPages/AssigmentCreate.xaml
+++ b/team_profi/Pages/DopPages/AssigmentCreate.xaml
@@ -24,24 +24,24 @@
         </Grid>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition Height="120*"/>
-                <RowDefinition Height="300*"/>
+                <RowDefinition Height="90*"/>
+                <RowDefinition Height="330*"/>
             </Grid.RowDefinitions>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="50*"/>
-                    <RowDefinition Height="70*"/>
+                    <RowDefinition Height="60*"/>
+                    <RowDefinition Height="60*"/>
                 </Grid.RowDefinitions>
-                <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Тема задания" VerticalAlignment="Center" Height="50" Width="780"/>
-                <TextBox HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Width="780" Height="50"/>
+                <TextBlock HorizontalAlignment="Left" FontSize="24" Style="{StaticResource ModernTextBlock}" TextWrapping="Wrap" Text="Тема задания" VerticalAlignment="Top" Height="27" Width="186" Margin="10,4,0,0"/>
+                <TextBox HorizontalAlignment="Center" Style="{StaticResource ModernTextBoxThemeAssigm}" TextWrapping="Wrap" VerticalAlignment="Top" Width="800" Height="50" Margin="0,35,0,0" Grid.RowSpan="2"/>
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="80*"/>
-                    <RowDefinition Height="220*"/>
+                    <RowDefinition Height="40*"/>
+                    <RowDefinition Height="290*"/>
                 </Grid.RowDefinitions>
-                <TextBlock HorizontalAlignment="Center" Margin="0,25,0,0" TextWrapping="Wrap" Text="Основная информация" VerticalAlignment="Top" Height="55" Width="780"/>
-                <TextBox HorizontalAlignment="Center" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Center" Width="780" Height="200"/>
+                <TextBlock HorizontalAlignment="Left" FontSize="24" Style="{StaticResource ModernTextBlock}" Margin="26,10,0,0" TextWrapping="Wrap" Text="Основная информация" VerticalAlignment="Top" Height="30" Width="260"/>
+                <TextBox HorizontalAlignment="Center" Grid.Row="1" Style="{StaticResource ModernTextBoxInfoAssigm}" TextWrapping="Wrap" VerticalAlignment="Center" Width="800" Height="289"/>
             </Grid>
         </Grid>
         <Grid Grid.Row="2">
